<resources>
    <string name="app_name">Views</string>
    <string name="nome">Nome:</string>
    <string name="email">E-mail:</string>
    <string name="telefone">Telefone:</string>
    <string name="sexo">sexo:</string>
    <string name="masculino">Masculino</string>
    <string name="feminino">Feminino</string>
    <string name="notif">Ativar Notificações:</string>
    <string name="pref">Preferencia:</string>
    <string name="musica">Musica</string>
    <string name="cinema">Cinema</string>
    <string name="esporte">Esporte</string>
    <string name="gastronomia">Gastronomia</string>
    <string name="exibir">Exibir</string>
    <string name="limpar">Limpar</string>
    <string name="off">Desligado</string>
    <string name="on">Ligado</string>
</resources>