<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity"
        android:orientation="vertical"
        android:layout_margin="@dimen/margem">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/nome"
        android:textSize="16sp"
        android:background="@color/design_default_color_primary"
        android:textColor="@color/white"/>

    <EditText
        android:id="@+id/edtNome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sexo"
        android:textSize="16sp"
        android:layout_marginTop="@dimen/margem"
        android:background="@color/design_default_color_primary"
        android:textColor="@color/white"/>

    <RadioGroup
        android:id="@+id/rdgSexo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/rdbMasc"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/masculino"/>
        <RadioButton
            android:id="@+id/rdbFemin"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/feminino"/>

    </RadioGroup>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/email"
        android:textSize="16sp"
        android:background="@color/design_default_color_primary"
        android:textColor="@color/white"/>

    <EditText
        android:id="@+id/edtEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/telefone"
        android:textSize="16sp"
        android:background="@color/design_default_color_primary"
        android:textColor="@color/white"/>

    <EditText
        android:id="@+id/edtTelefone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="phone"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/pref"
        android:textSize="16sp"
        android:background="@color/design_default_color_primary"
        android:textColor="@color/white"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margem">

    <CheckBox
        android:id="@+id/chkMusica"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/musica"/>
    <CheckBox
        android:id="@+id/chkCinema"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cinema"/>
    <CheckBox
        android:id="@+id/chkEsporte"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/esporte"/>
    <CheckBox
        android:id="@+id/chkGastronomia"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/gastronomia"/>
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/notif"
        android:textSize="16sp"
        android:background="@color/design_default_color_primary"
        android:textColor="@color/white"/>

    <Switch
        android:id="@+id/swtNotif"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textOff="@string/off"
        android:textOn="@string/on"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button android:id="@+id/btnExibir"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/exibir"
            android:layout_margin="@dimen/margem"
            android:textColor="@color/white"/>
        <Button android:id="@+id/btnLimpar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/limpar"
            android:layout_margin="@dimen/margem"
            android:textColor="@color/white"/>
    </LinearLayout>

        <LinearLayout android:id="@+id/lblDados"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@color/purple_200"
            android:visibility="invisible"
            android:padding="@dimen/margem">

            <TextView android:id="@+id/txtNome"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <TextView android:id="@+id/txtSexo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <TextView android:id="@+id/txtEmail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <TextView android:id="@+id/txtTelefone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <TextView android:id="@+id/txtPref"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <TextView android:id="@+id/txtNotif"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        </LinearLayout>
</LinearLayout>
    </ScrollView>



